longhorn/overlays/dell7040/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
  namespace: infrastructure
spec:
  hostnames:
    - longhorn.lab.definit.co.uk
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infrastructure-gateway
      namespace: infrastructure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: longhorn-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
